component group spacing fixed

--- a/Shared/Components/VaryingComponent.razor.css
+++ b/Shared/Components/VaryingComponent.razor.css
@@ -84,6 +84,7 @@
     background-color: #badbf1;
     border-radius: 1rem 1rem 1rem 1rem;
     margin-bottom: 7px;
+    padding: 10px 0;
 }
 
 .dropdownSetting {
